# alnoda-wrk

./: .gitignore  README.md  pyproject.toml  requirements.txt
alnoda_wrk/: alnoda_api.py  builder.py  cheatsheet.py  conf_parser.py  config_schema.py  fileops.py  globals.py  install_app.py  links.py  main.py  meta_about.py  ports.py  processes.py  rich_playground.py  services.py  share.py  sign_in.py  templates.py  ui_builder.py  ui_styles.py  upgrade.py  versioning.py  wrk_modifiers.py  wrk_supervisor.py  zsh.py
alnoda_wrk/tui/: admin.py  admin_copy.py  admin_copy_2.py  aliases_widget.py  appearance_widget.py  apps_services.py  cheatsheet_widget.py  color_frame.py  description_widget.py  env_vars_widget.py  features_widget.py  gvars.py  helper_vidgets.py  home.py  interface_widget.py  links_widget.py  my_notes_widget.py  preferences_widget.py  preferences_widget_backup.py  processes_widget.py  share_widget.py  signin_widget.py  zsh_widget.py
alnoda_wrk/tui_pytermgui/: myInputField.py  wrk_settings.py
alnoda_wrk/wrk/: bookmarks.json  cheatsheet.json  lineage.json  links.json  meta.json
alnoda_wrk/wrk/requires/: deps.txt
alnoda_wrk/wrk/ui/: mkdocs.yml
tests/: test_alnoda_wrk.py
tests/builder/: test_ui_builder.py
tests/conf_parse/: test_config_dir.py  test_config_parser.py
tests/conf_parse/workspace-yaml/: workspace-app-name-dash.yaml  workspace-app-name-space.yaml  workspace-correct-no-styles.yaml  workspace-correct.yaml  workspace-incorrect-struct.yaml  workspace-incorrect-type.yaml  workspace-miss-nest-field.yaml  workspace-missing-name.yaml  (+2 more)
(+10 files in other folders)
